fixed overflow-x

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,13 +4,15 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: #f2f2f2;
   color: #555;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   font-size: 25px;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 .row {
